--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Tidder</title>
   <meta name="description" content="Find out where a link has been posted on Reddit!">
