added more feedback for users

--- a/index.html
+++ b/index.html
@@ -18,17 +18,24 @@
 		<div class="jumbotron">
 			<h1 class="text-center">Tidder</h1>
 			<p class="text-center">A reverse link search for Reddit.</p>
-			<input type="url" id="urlInput" class="form-control" placeholder="Paste the url you want to search for here">
+			<input type="url" id="urlInput" class="form-control" placeholder="Paste the url you want to search for here" autofocus>
 			<input type="button" class="btn btn-primary center-block" onclick="searchReddit()" value="Search">
 		</div>
-		<div class="list-group" id="results">
-			<p class="lead">If you're like me, you've seen pictures, watched videos, and read articles online and thought "Wow, I'd love to see the discussion on Reddit about this!", or maybe you'd like to see where others have posted your content on Reddit. These are a common situations for me, so I made Tidder. Give it any link, and Tidder will give you a list of all the times that that that link has been posted to Reddit.</p>
+		<div>
+			<div class="list-group" id="results">
+				<div class="panel panel-default">
+					<div class="panel-body">If you're like me, you've seen pictures, watched videos, and read articles online and thought "Wow, I'd love to see the discussion on Reddit about this!", or maybe you'd like to see where others have posted your content on Reddit. These are a common situations for me, so I made Tidder. Give it any link, and Tidder will give you a list of all the times that that that link has been posted to Reddit.</div>
+				</div>
+			</div>
+			<div id="spinner"></div>
 		</div>
+		<hr>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
-  <script src="script.js"></script>
+  <script src="js/spin.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
