--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 	<div class="container">
 		<div id="resultHeader">
-			<h3><b id="numResults"></b></h4>
+			<h3><b><span id="numResults"></span>&nbspresults</b></h4>
 			<form class="form-inline">
 				<div class="form-group">
 					<label>sort by:</label>
