no new features, but nicer js

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 		<div class="container">
 			<h1 class="text-center">Tidder</h1>
 			<p class="text-center">A reverse link search for Reddit.</p>
-			<input type="url" id="urlInput" class="form-control" placeholder="Paste the url you want to search for here" autofocus>
-			<input type="button" class="btn btn-primary center-block" id="searchButton" value="Search">
+      <form id="search">
+        <input type="url" id="urlInput" class="form-control"
+          placeholder="Paste the url you want to search for here" autofocus>
+        <input type="submit" class="btn btn-primary center-block" value="Search">
+      </form>
 		</div>
 	</div>
 	<div class="container">
@@ -28,10 +31,10 @@
 			<form class="form-inline">
 				<div class="form-group">
 					<label>sort by:</label>
-					<select class="form-control" id="sortMethod">
-						<option>Score</option>
-						<option>Comments</option>
-						<option>Date</option>
+					<select class="form-control" id="sort">
+						<option value="score">Score</option>
+						<option value="num_comments">Comments</option>
+						<option value="created_utc">Date</option>
 					</select>
 				</div>
 			</form>
@@ -41,7 +44,14 @@
 				<div class="panel-body">If you're like me, you've seen pictures, watched videos, and read articles online and thought "Wow, I'd love to see the discussion on Reddit about this!", or maybe you'd like to see where others have posted your content on Reddit. These are a common situations for me, so I made Tidder. Give it any link, and Tidder will give you a list of all the times that that that link has been posted to Reddit.</div>
 			</div>
 		</div>
+		<div class="alert alert-info" id="noLuck">
+			That link hasn't been posted anywhere on Reddit yet!
+		</div>
 		<div id="spinner"></div>
+    <footer class="text-right">
+      <hr>
+      created by <a href="http://jamesbvaughan.com">James Vaughan</a>
+    </footer>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
