--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"
         content="Find out where a link has been posted on Reddit!">
   <meta name="author" content="James Vaughan">
@@ -10,39 +10,40 @@
   <title>Tidder</title>
 
   <link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet"
+  <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
 <body>
-	<div class="jumbotron">
-		<div class="container">
-			<h1 class="text-center">Tidder</h1>
-			<p class="text-center">A reverse link search for Reddit.</p>
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="text-center">Tidder</h1>
+      <p class="text-center">A reverse link search for Reddit.</p>
       <form id="search">
         <input id="urlInput" type="url" class="form-control" name="url"
           placeholder="Paste the url you want to search for here" autofocus>
-        <input type="submit" class="btn btn-primary center-block" value="Search">
+        <input type="submit" class="btn btn-primary center-block"
+          value="Search">
       </form>
-		</div>
-	</div>
-	<div class="container">
-		<div id="resultHeader">
-			<h3><b><span id="numResults"></span>&nbspresults</b></h4>
-			<form class="form-inline">
-				<div class="form-group">
-					<label>sort by:</label>
-					<select class="form-control" id="sort">
-						<option value="score">Score</option>
-						<option value="num_comments">Comments</option>
-						<option value="created_utc">Date</option>
-					</select>
-				</div>
-			</form>
-		</div>
-		<div class="row list-group" id="results">
-			<div class="panel panel-default">
-				<div class="panel-body">
+    </div>
+  </div>
+  <div class="container">
+    <div id="resultHeader">
+      <h3><b><span id="numResults"></span>&nbspresults</b></h4>
+      <form class="form-inline">
+        <div class="form-group">
+          <label>sort by:</label>
+          <select class="form-control" id="sort">
+            <option value="score">Score</option>
+            <option value="num_comments">Comments</option>
+            <option value="created_utc">Date</option>
+          </select>
+        </div>
+      </form>
+    </div>
+    <div class="row list-group" id="results">
+      <div class="panel panel-default">
+        <div class="panel-body">
           If you're like me, you've seen pictures, watched videos, and read
           articles online and thought "Wow, I'd love to see the discussion on
           Reddit about this!", or maybe you'd like to see where others have
@@ -50,21 +51,21 @@
           so I made Tidder. Give it any link, and Tidder will give you a list
           of all the times that that that link has been posted to Reddit.
         </div>
-			</div>
-		</div>
-		<div class="alert alert-info" id="noLuck">
-			That link hasn't been posted anywhere on Reddit yet!
-		</div>
-		<div id="spinner"></div>
+      </div>
+    </div>
+    <div class="alert alert-info" id="noLuck">
+      That link hasn't been posted anywhere on Reddit yet! Make sure that the URL you searched is <i>exactly</i> what you want. Try removing any unneeded parameters in the URL if you are really sure that it's been posted and you still got this error.
+    </div>
+    <div id="spinner"></div>
     <footer class="text-right">
       <hr>
       created by <a href="http://jamesbvaughan.com">James Vaughan</a>
     </footer>
-	</div>
+  </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/spin.min.js"></script>
 </body>
